--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.7",
+    "@tanstack/react-query": "^5.90.11",
     "antd": "^5.28.1",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
