--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.7",
     "@tanstack/react-query": "^5.90.11",
+    "@uiw/react-codemirror": "^4.25.4",
     "antd": "^5.28.1",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
@@ -43,6 +44,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
